src/css/pipelines/workflows.css
/* Custom CSS for workflows here */

.workflow-view {
  min-height: 85vh;
}

.workflow-container {
  background-color: #f4f5f78a;
  border: 1px solid #f4f5f7ce;
  border-radius: 0.25rem;

  background-size: 40px 40px;
  background-image: linear-gradient(to right, #dddddd 1px, transparent 1px),
    linear-gradient(to bottom, #dddddd 1px, transparent 1px);

  min-height: 70vh;
}

.workflow-module-container-width-sm {
  max-width: 225px;
}

.workflow-module-container-width {
  max-width: 300px;
}

.workflow-module-container-height {
  min-height: 102px;
}

.workflow-module-container {
  background-color: #fff;
  color: #334152;
  border-style: solid;
  border-color: #3D3B36;
  border-width: 2px;
}

.catalog-card-title {
  color: #3D3B36;
  background-color: rgba(0, 0, 0, 0.03);
  border-bottom: 2px solid #3D3B36;
}

.catalog-card-text {
  line-height: 1.54;
  color: #3D3B36;
  min-height: 100px;
}

.pipeline-card-title {
  background-color: #E8E8E8;
  font-size: 1rem;
}

.pipeline-card-text {
  min-height: 120px !important;
}

.pipeline-text {
  color: #3D3B36;
}

.pipeline-text:hover {
  color: #46415c;
}

.stop-rectangle {
  width: 30px;
  height: 30px;
  border-radius: 3px;
  border: solid 3px #241f3d;
}

.blue-underline {
  background-color: #241f3d;
}

.workflow-editor-panel {
  border-top: 1px solid rgba(0, 0, 0, 0.125);
  border-left: 1px solid rgba(0, 0, 0, 0.125);
  border-top-left-radius: 0.25rem;
  min-height: 85vh;
}

.workflow-step-failure {
  border-color: #ff0000;
  border-width: 2px;
}

.workflow-step-running {
  border-color: #28a745;
  border-width: 2px;
}

.workflow-step-success {
  border-color: #0f3e84;
  border-width: 2px;
}

.workflow-step-warning {
  border-color: #f9c116;
  border-width: 2px;
}

.workflow-step-stopped {
  border-color: #dc3545;
  border-width: 2px;
}

.workflow-step-disabled {
  border-color: #3D3B36;
  border-width: 2px;
  opacity: 0.65;
}

.workflow-action-icons {
  font-size: 1.1em;
}

.workflow-module-text-flex-basis {
  flex-basis: 3rem;
}

.workflow-tool-activity-container {
  position: fixed;
  bottom: 5px;
  right: 5px;
  width: 740px;
  height: 440px;
  z-index: 10;
  padding-top: 5px !important;
}

.workflow-tool-activity-window {
  height: 400px;
  overflow-x: hidden;
  overflow-y: scroll;
  display: flex;
  flex-direction: column-reverse;
  overscroll-behavior: contain;
  margin-top: 5px;
}

.pipeline-activity-filter {
  width: 33%;
}

.tag-modal div.modal-dialog div.modal-content {
  overflow: visible !important;
}

.settings-sidebar {
  height: 100vh; /* 100% Full-height */
  width: 100%; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  top: 0; /* Stay at the top */
  right: 0;
  background-color: #33415278; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  overflow-y: auto;
  padding-top: 65px;
  /*transition: 0.5s;*/ /* 0.5 second transition effect to slide in the sidenav */
  z-index: 100;
}

.step-setting-editor {
  background-color: #fff;
  height: 100%;
  width: 750px;
}

.step-settings-container {
  min-height: calc(100% - 65px);
  overflow: auto;
}

.step-settings-body {
  min-height: 55vh;
}

.scroller {
  margin: 0 auto;
  max-height: 500px;
  width: auto;
  overflow: auto;
}

